Added main content

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <a href="#Preface">Preface</a>
     <a href="#Japanese_Greetings_and_Useful_Phrases">Japanese Greetings and Useful Phrases</a>
     <a href="#Grammar_I_Am">Grammar: I Am</a>
-    <a href="#">Vocabulary: Japanese Occupations</a>
-  <a href="#">Let's Try! #1</a>
+    <a href="#Vocabulary_Japanese_Occupations">Vocabulary: Japanese Occupations</a>
+  <a href="#Lets_Try_1">Let's Try! #1</a>
     <a href="#">Grammar: Are You? Is She?</a>
     <a href="#">Vocabulary: Nations and Nationalities</a>
   <a href="#">Vocabulary: Numbers and Ages</a>
@@ -68,6 +68,29 @@ She is a teacher.
      <h2>Note: Null-Subject Language</h2>
      <p>Japanese is what is called a “null-subject language,” which means that the subject of a sentence can be omitted in cases when it is obvious to the speaker and listener. For example, if a person named Yuki introduces himself, 「ゆうきです」rather than 「わたしはゆうきです」is still a correct way to say “I am Yuki” because it is clear that Yuki is speaking of himself and giving his name.</p>
    </div>
+</section>
+
+<section class="main-section" id="Vocabulary_Japanese_Occupations">
+  <header>Vocabulary: Japanese Occupations</header>
+  <p>Below is a list of some occupations in Japanese. Read over the vocabulary on this list and refer to it when doing the “Let’s Try!” exercises that follow.</p>
+  <code>
+    せんせい = teacher		がくせい = student		いしゃ = doctor
+    かんごし = nurse		せんしゅ = athlete		ミュージシャン = musician
+    かいしゃいん = office worker べんごし  = lawyer	かがくしゃ = scientist
+  </code>
+</section>
+
+<section class="main-section" id="Lets_Try_1">
+  <header>Let's Try! #1</header>
+  <ul>Translate these Japanese sentences into English:</ul>
+    <li>ジョンはいしゃです。</li>
+    <li>かれはかいしゃいんです。</li>
+    <li>かのじょはがくせいです。</li>
+  </ul>
+  <ul>Translate these English sentences into Japanese:</ul>
+    <li>Tom is a lawyer.</li>
+    <li>She is a scientist.</li>
+</section>
 
 
 
