Added main content and navbar IDs, updated styles

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <a href="#Grammar_I_Am">Grammar: I Am</a>
     <a href="#Vocabulary_Japanese_Occupations">Vocabulary: Japanese Occupations</a>
   <a href="#Lets_Try_1">Let's Try! #1</a>
-    <a href="#">Grammar: Are You? Is She?</a>
-    <a href="#">Vocabulary: Nations and Nationalities</a>
+    <a href="#Grammar_Are_You_Is_She">Grammar: Are You? Is She?</a>
+    <a href="#Vocabulary_Countries_and_Nationalities">Vocabulary: Countries and Nationalities</a>
   <a href="#">Vocabulary: Numbers and Ages</a>
   <a href="#">Let's Try! #2</a>
   <a href="#">Grammar: My, Hers, His</a>
@@ -56,7 +56,7 @@
       </section>
  
  <section class="main-section" id="Grammar_I_Am">
-   <header>“I Am” - NounはNounです</header>
+   <header>Grammar: “I Am” - NounはNounです</header>
    <p>The grammar particle 「は」marks the subject of a sentence, such as “I,” “He,” “Tom,” or whatever else a speaker is talking about. The Japanese language contains several of these “particles” that show the role of a word in a sentence, and the subject marker 「は」is the most fundamental of these particles. In learning Hiragana, you probably learned that 「は」is pronounced like 「わ」when used as the subject marker. This irregular reading may seem jarring at first, but will be easy to pick up as we read Japanese sentences in context.</p>
    <p>The word 「です」is used to complete a sentence following a noun. 「です」is like a period at the end of a sentence that makes something 'what it is.' It's the difference between just saying the word “doctor” and stating “I am a doctor.” By putting some nouns in their proper places with 「は」and 「です」, we can make some simple sentences that say “____ is _____.”</p>
    <code>わたしはトムです。
@@ -90,6 +90,28 @@ She is a teacher.
   <ul>Translate these English sentences into Japanese:</ul>
     <li>Tom is a lawyer.</li>
     <li>She is a scientist.</li>
+</section>
+
+<section class="main-section" id="Grammar_Are_You_Is_She">
+  <header>Grammar: Are You? Is She? - The 「か」Question Marker</header>
+  <p>Let’s add another grammar particle to what we know. The 「か」particle marks a question, so changing our sentence ender 「です」to 「ですか」takes us from “It is ___” to “Is it ___?” Forming questions is very easy in Japanese, because we can take the structure of an ordinary statement and add 「か」to the end to make it a question.
+  </p>
+  <code>がくせいですか。
+
+  Are you a student?
+  
+  アメリカじんですか。
+  
+  Are you (an) American?
+  </code>
+</section>
+
+<section class="main-section" id="Vocabulary_Countries_and_Nationalities">
+  <header>Vocabulary: Countries and Nationalities</header>
+  <p>Below is a list of country names in Japanese. Note that Japan and the East Asian countries are written in <em>Hiragana</em> (they have kanji characters as well), while the western nations are written in <em>Katakana</em>.</p>
+  <code>にほん = Japan	ちゅうごく = China		かんこく = Korea		アメリカ = America/ the U.S.	カナダ = Canada		メキシコ = Mexico     スペイン = Spainフランス = France	イタリア = Italy		ポルトガル = Portugal	ブラジル = Brazil		イギリス = Britain / the UK		オーストラリア = Australia  ドイツ = Germany	コロンビア = Colombia</code>
+  <p>To turn a country name into a nationality, simply add 「じん」(meaning “person”) to the end of it. 「にほんじん」means “Japanese” (a Japanese person), メキシコじん means “Mexican” (Mexican person), and so on. Try this out with a few more nationalities and refer back to this country list as we use these words in the grammar lessons that follow.
+  </p>
 </section>
 
 
