Updated navbar link classes

--- a/index.html
+++ b/index.html
@@ -7,21 +7,22 @@
 </head>
 
 <body>
+  
   <nav id="navbar">
     <header>Introduction to Japanese: Lesson 1</header>
-    <a href="#Preface">Preface</a>
-    <a href="#Japanese_Greetings_and_Useful_Phrases">Japanese Greetings and Useful Phrases</a>
-    <a href="#Grammar_I_Am">Grammar: I Am</a>
-    <a href="#Vocabulary_Japanese_Occupations">Vocabulary: Japanese Occupations</a>
-  <a href="#Lets_Try_1">Let's Try! #1</a>
-    <a href="#Grammar_Are_You_Is_She">Grammar: Are You? Is She?</a>
-    <a href="#Vocabulary_Countries_and_Nationalities">Vocabulary: Countries and Nationalities</a>
-  <a href="#">Vocabulary: Numbers and Ages</a>
-  <a href="#">Let's Try! #2</a>
-  <a href="#">Grammar: My, Hers, His</a>
-  <a href="#">Vocabulary: Family Members and Pets</a>
-  <a href="#">Let's Try! #3</a>
-    <a href="#">Review Exercises</a>
+    <a class="nav-link" href="#Preface">Preface</a>
+    <a class="nav-link" href="#Japanese_Greetings_and_Useful_Phrases">Japanese Greetings and Useful Phrases</a>
+    <a class="nav-link" href="#Grammar_I_Am">Grammar: I Am</a>
+    <a class="nav-link" href="#Vocabulary_Japanese_Occupations">Vocabulary: Japanese Occupations</a>
+    <a class="nav-link" href="#Lets_Try_1">Let's Try! #1</a>
+    <a class="nav-link" href="#Grammar_Are_You_Is_She">Grammar: Are You? Is She?</a>
+    <a class="nav-link" href="#Vocabulary_Countries_and_Nationalities">Vocabulary: Countries and Nationalities</a>
+    <a class="nav-link" href="#">Vocabulary: Numbers and Ages</a>
+    <a class="nav-link" href="#">Let's Try! #2</a>
+    <a class="nav-link" href="#">Grammar: My, Hers, His</a>
+    <a class="nav-link" href="#">Vocabulary: Family Members and Pets</a>
+    <a class="nav-link" href="#">Let's Try! #3</a>
+    <a class="nav-link" href="#">Review Exercises</a>
 </nav>
 
 <main id="main-doc">
