Added main content

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <a class="nav-link" href="#Lets_Try_1">Let's Try! #1</a>
     <a class="nav-link" href="#Grammar_Are_You_Is_She">Grammar: Are You? Is She?</a>
     <a class="nav-link" href="#Vocabulary_Countries_and_Nationalities">Vocabulary: Countries and Nationalities</a>
-    <a class="nav-link" href="#">Vocabulary: Numbers and Ages</a>
-    <a class="nav-link" href="#">Let's Try! #2</a>
-    <a class="nav-link" href="#">Grammar: My, Hers, His</a>
-    <a class="nav-link" href="#">Vocabulary: Family Members and Pets</a>
-    <a class="nav-link" href="#">Let's Try! #3</a>
+    <a class="nav-link" href="#Vocabulary_Numbers_and_Ages">Vocabulary: Numbers and Ages</a>
+    <a class="nav-link" href="#Lets_Try_2">Let's Try! #2</a>
+    <a class="nav-link" href="#Grammar_My_Hers_His">Grammar: My, Hers, His</a>
+    <a class="nav-link" href="#Vocabulary_Family_Members_and_Pets">Vocabulary: Family Members and Pets</a>
+    <a class="nav-link" href="#Lets_Try_3">Let's Try! #3</a>
     <a class="nav-link" href="#">Review Exercises</a>
 </nav>
 
@@ -35,7 +35,7 @@
       <li>Make simple sentences about your name, age, and nationality</li>
       <li>Recall basic vocabulary including numbers, countries, occupations, and family members
     <p><strong>Prerequisites:</strong> The reader should be able to read <em>Hiragana</em> and <em>Katakana</em> to follow this lesson, as <em>Romaji</em> will not be used with Japanese sentences. <em>Kanji</em> characters will not be used in this lesson.
-    <p>See <a href="http://guidetojapanese.org/learn/category/grammar-guide/the-writing-system/">Tae Kim's Guide to Japanese</a> for a lesson on the <em>Hiragana</em> and <em>Katakana</em> writing systems.    
+    <p>See <a href="http://guidetojapanese.org/learn/category/grammar-guide/the-writing-system/" target="blank_">Tae Kim's Guide to Japanese</a> for a lesson on the <em>Hiragana</em> and <em>Katakana</em> writing systems.    
     </section>
 
     <section class="main-section" id="Japanese_Greetings_and_Useful_Phrases">
@@ -115,7 +115,66 @@ She is a teacher.
   </p>
 </section>
 
+<section class="main-section" id="Vocabulary_Numbers_and_Ages">
+  <header>Vocabulary: Numbers and Ages</header>
+  <p>Now let’s practice reading numbers in Japanese. The numbers one through twenty are provided here, followed by the next few multiples of ten, as you should be able to grasp the pattern of these numbers. Note that the numbers four and seven have multiple readings. The readings of these numbers are usually interchangeable. The alternative pronunciations よん (four) and なな (seven) have to do with cultural superstitions about the sound shi in these numbers, which sound similar to the Japanese word for “death.” (See <a href="https://en.wikipedia.org/wiki/Japanese_superstitions#Numbers" target="blank_">this Wikipedia article</a> if you’re curious about this superstition). Look over these numbers and practice reading them aloud.
+  </p>
+  <code>1 (いち)	2 (に)		3 (さん)	4 (し / よん)		5 (ご)		6 (ろく)	7 (しち / なな)	8 (はち)	9 (きゅう)	10 (じゅう)	11 (じゅういち)  12 (じゅうに)	13 (じゅうさん)	14 (じゅうよん)	15 (じゅうご)	16 (じゅうろく)	17 (じゅうなな)	18 (じゅうはち)	19 (じゅうきゅう)	20 (にじゅう)	30 (さんじゅう)	40 (よんじゅう)	50 (ごじゅう)	60 (ろくじゅう)	70 (ななじゅう)	80 (はちじゅう)	90 (きゅうじゅう)	100 (ひゃく)</code>
+  <h2>Age: ~さい</h2>
+  <p>To say someone’s age, simply take a number and add the suffix 「さい」(“years old”) to the end. 「ろくさい」means “six years old,” 「よんじゅうさい」means “forty years old,” and so on. A notable exception is twenty years old (the age of adulthood in Japan), which reads as 「はたち」without the 「さい」suffix.
+  </p>
+  <p>To ask for an age using the 「か」suffix, use this phrase: 「なんさいですか。」</p>
+  <p>An example of this question-and-answer exchange:</p>
+  <code>「なんさいですか。」(How old are you?)
+    「２５さいです。」(I am twenty-five years old.)
+    </code>
+</section>
 
+<section class="main-section" id="Lets_Try_2">
+  <header>Let's Try! #2</header>
+  <ul>Please translate these Japanese questions into English:</ul>
+    <li>かれはイタリアじんですか。</li>
+    <li>ジョンはべんごしですか。</li>
+    <li>かのじょはせんせいですか。</li>
+  </ul>
+  <ul>Please reply to these questions with your own answer:</ul>
+    <li>にほんじんですか。(If not, reply with your own information.)</li>
+    <li>なんさいですか。</li>
+</section>
+
+<section class="main-section" id="Grammar_My_Hers_His">
+  <header>Grammar: My, Hers, His - The 「の」Possessive Marker</header>
+  <p>The particle 「の」is used between two nouns to indicate that the second noun “belongs” to the first. In context, the 「の」particle can be used to show that something is “my” or “his” or “of” a certain group, or it has the role of the “apostrophe-s” in “John’s mother.” The particle 「の」can also be used to group many other things in relation to one another, such as a combination of city name + country.</p>
+  <code>わたしのいえ
+    My house
+    わたしのおかあさんはせんせいです。
+    My mother is a teacher.
+    カナダのトロント
+    Toronto, Canada (note that the country name comes first in Japanese, as in “Canada’s Toronto” or “Toronto of Canada.”</code>
+</section>
+
+<section class="main-section" id="Vocabulary_Family_Members_and_Pets">
+  <header>Vocabulary: Family Members and Pets</header>
+  <p>Below is a list of vocabulary for family and members and common types of pets. Look over the list and refer to it when doing the “Let’s Try!” exercises that follow.</p>
+  <code>おかあさん = mother	おとうさん = father		おにいさん = older brother
+    おねえさん = older sister	おとうと = younger brother	いもうと = younger sister
+    おじいさん = grandfather	おばあさん = grandmother		おばさん = aunt
+    おじさん = uncle	いとこ = cousin	いぬ = dog	ねこ = cat	とり = bird	きんぎょ = goldfish</code>
+</section>
+
+<section class="main-section" id="Lets_Try_3">
+  <header>Let's Try! #3</header>
+  <ul>Translate these Japanese sentences into English:</ul>
+    <li>かのじょのおかあさんはかんごしです。</li>
+    <li>かれのおとうとは１０さいです。</li>
+    <li>いぬのなまえはポチです。</li>
+  </ul>
+  <ul>Now translate these English sentences into Japanese:</ul>
+    <li>My father is an office worker.</li>
+    <li>Her cat is two years old.</li>
+    <li>(My) cousin's name is John.</li>
+  </ul>
+</section>
 
 
 
