Added main content and footer, added styles, updated section IDs

--- a/index.html
+++ b/index.html
@@ -12,18 +12,20 @@
     <header>Introduction to Japanese: Lesson 1</header>
     <a class="nav-link" href="#Preface">Preface</a>
     <a class="nav-link" href="#Japanese_Greetings_and_Useful_Phrases">Japanese Greetings and Useful Phrases</a>
-    <a class="nav-link" href="#Grammar_I_Am">Grammar: I Am</a>
-    <a class="nav-link" href="#Vocabulary_Japanese_Occupations">Vocabulary: Japanese Occupations</a>
-    <a class="nav-link" href="#Lets_Try_1">Let's Try! #1</a>
-    <a class="nav-link" href="#Grammar_Are_You_Is_She">Grammar: Are You? Is She?</a>
-    <a class="nav-link" href="#Vocabulary_Countries_and_Nationalities">Vocabulary: Countries and Nationalities</a>
-    <a class="nav-link" href="#Vocabulary_Numbers_and_Ages">Vocabulary: Numbers and Ages</a>
-    <a class="nav-link" href="#Lets_Try_2">Let's Try! #2</a>
-    <a class="nav-link" href="#Grammar_My_Hers_His">Grammar: My, Hers, His</a>
-    <a class="nav-link" href="#Vocabulary_Family_Members_and_Pets">Vocabulary: Family Members and Pets</a>
-    <a class="nav-link" href="#Lets_Try_3">Let's Try! #3</a>
-    <a class="nav-link" href="#">Review Exercises</a>
+    <a class="nav-link" href="#Grammar:_“I_Am”_-_NounはNounです">Grammar: “I Am” - NounはNounです</a>
+    <a class="nav-link" href="#Vocabulary:_Japanese_Occupations">Vocabulary: Japanese Occupations</a>
+    <a class="nav-link" href="#Let's_Try!_#1">Let's Try! #1</a>
+    <a class="nav-link" href="#Grammar:_Are_You?_Is_She?_-_The_「か」_Question_Marker">Grammar: Are You? Is She? - The 「か」 Question Marker</a>
+    <a class="nav-link" href="#Vocabulary:_Countries_and_Nationalities">Vocabulary: Countries and Nationalities</a>
+    <a class="nav-link" href="#Vocabulary:_Numbers_and_Ages">Vocabulary: Numbers and Ages</a>
+    <a class="nav-link" href="#Let's_Try!_#2">Let's Try! #2</a>
+    <a class="nav-link" href="#Grammar:_My,_Hers,_His_-_The_「の」_Possessive_Marker">Grammar: My, Hers, His - The 「の」 Possessive Marker</a>
+    <a class="nav-link" href="#Vocabulary:_Family_Members_and_Pets">Vocabulary: Family Members and Pets</a>
+    <a class="nav-link" href="#Let's_Try!_#3">Let's Try! #3</a>
+    <a class="nav-link" href="#Review_Exercises">Review Exercises</a>
 </nav>
+
+<!-- Consider modifying IDs and section names because they look tacky in navbar-->
 
 <main id="main-doc">
     
@@ -56,7 +58,7 @@
         はい。/ いいえ。= Yes / No </code>
       </section>
  
- <section class="main-section" id="Grammar_I_Am">
+ <section class="main-section" id="Grammar:_“I_Am”_-_NounはNounです">
    <header>Grammar: “I Am” - NounはNounです</header>
    <p>The grammar particle 「は」marks the subject of a sentence, such as “I,” “He,” “Tom,” or whatever else a speaker is talking about. The Japanese language contains several of these “particles” that show the role of a word in a sentence, and the subject marker 「は」is the most fundamental of these particles. In learning Hiragana, you probably learned that 「は」is pronounced like 「わ」when used as the subject marker. This irregular reading may seem jarring at first, but will be easy to pick up as we read Japanese sentences in context.</p>
    <p>The word 「です」is used to complete a sentence following a noun. 「です」is like a period at the end of a sentence that makes something 'what it is.' It's the difference between just saying the word “doctor” and stating “I am a doctor.” By putting some nouns in their proper places with 「は」and 「です」, we can make some simple sentences that say “____ is _____.”</p>
@@ -71,7 +73,7 @@ She is a teacher.
    </div>
 </section>
 
-<section class="main-section" id="Vocabulary_Japanese_Occupations">
+<section class="main-section" id="Vocabulary:_Japanese_Occupations">
   <header>Vocabulary: Japanese Occupations</header>
   <p>Below is a list of some occupations in Japanese. Read over the vocabulary on this list and refer to it when doing the “Let’s Try!” exercises that follow.</p>
   <code>
@@ -81,7 +83,7 @@ She is a teacher.
   </code>
 </section>
 
-<section class="main-section" id="Lets_Try_1">
+<section class="main-section" id="Let's_Try!_#1">
   <header>Let's Try! #1</header>
   <ul>Translate these Japanese sentences into English:</ul>
     <li>ジョンはいしゃです。</li>
@@ -93,9 +95,9 @@ She is a teacher.
     <li>She is a scientist.</li>
 </section>
 
-<section class="main-section" id="Grammar_Are_You_Is_She">
-  <header>Grammar: Are You? Is She? - The 「か」Question Marker</header>
-  <p>Let’s add another grammar particle to what we know. The 「か」particle marks a question, so changing our sentence ender 「です」to 「ですか」takes us from “It is ___” to “Is it ___?” Forming questions is very easy in Japanese, because we can take the structure of an ordinary statement and add 「か」to the end to make it a question.
+<section class="main-section" id="Grammar:_Are_You?_Is_She?_-_The_「か」_Question_Marker">
+  <header>Grammar: Are You? Is She? - The 「か」 Question Marker</header>
+  <p>Let's add another grammar particle to what we know. The 「か」particle marks a question, so changing our sentence ender 「です」to 「ですか」takes us from “It is ___” to “Is it ___?” Forming questions is very easy in Japanese, because we can take the structure of an ordinary statement and add 「か」to the end to make it a question.
   </p>
   <code>がくせいですか。
 
@@ -107,7 +109,7 @@ She is a teacher.
   </code>
 </section>
 
-<section class="main-section" id="Vocabulary_Countries_and_Nationalities">
+<section class="main-section" id="Vocabulary:_Countries_and_Nationalities">
   <header>Vocabulary: Countries and Nationalities</header>
   <p>Below is a list of country names in Japanese. Note that Japan and the East Asian countries are written in <em>Hiragana</em> (they have kanji characters as well), while the western nations are written in <em>Katakana</em>.</p>
   <code>にほん = Japan	ちゅうごく = China		かんこく = Korea		アメリカ = America/ the U.S.	カナダ = Canada		メキシコ = Mexico     スペイン = Spainフランス = France	イタリア = Italy		ポルトガル = Portugal	ブラジル = Brazil		イギリス = Britain / the UK		オーストラリア = Australia  ドイツ = Germany	コロンビア = Colombia</code>
@@ -115,7 +117,7 @@ She is a teacher.
   </p>
 </section>
 
-<section class="main-section" id="Vocabulary_Numbers_and_Ages">
+<section class="main-section" id="Vocabulary:_Numbers_and_Ages">
   <header>Vocabulary: Numbers and Ages</header>
   <p>Now let’s practice reading numbers in Japanese. The numbers one through twenty are provided here, followed by the next few multiples of ten, as you should be able to grasp the pattern of these numbers. Note that the numbers four and seven have multiple readings. The readings of these numbers are usually interchangeable. The alternative pronunciations よん (four) and なな (seven) have to do with cultural superstitions about the sound shi in these numbers, which sound similar to the Japanese word for “death.” (See <a href="https://en.wikipedia.org/wiki/Japanese_superstitions#Numbers" target="blank_">this Wikipedia article</a> if you’re curious about this superstition). Look over these numbers and practice reading them aloud.
   </p>
@@ -130,7 +132,7 @@ She is a teacher.
     </code>
 </section>
 
-<section class="main-section" id="Lets_Try_2">
+<section class="main-section" id="Let's_Try!_#2">
   <header>Let's Try! #2</header>
   <ul>Please translate these Japanese questions into English:</ul>
     <li>かれはイタリアじんですか。</li>
@@ -142,8 +144,8 @@ She is a teacher.
     <li>なんさいですか。</li>
 </section>
 
-<section class="main-section" id="Grammar_My_Hers_His">
-  <header>Grammar: My, Hers, His - The 「の」Possessive Marker</header>
+<section class="main-section" id="Grammar:_My,_Hers,_His_-_The_「の」_Possessive_Marker">
+  <header>Grammar: My, Hers, His - The 「の」 Possessive Marker</header>
   <p>The particle 「の」is used between two nouns to indicate that the second noun “belongs” to the first. In context, the 「の」particle can be used to show that something is “my” or “his” or “of” a certain group, or it has the role of the “apostrophe-s” in “John’s mother.” The particle 「の」can also be used to group many other things in relation to one another, such as a combination of city name + country.</p>
   <code>わたしのいえ
     My house
@@ -153,7 +155,7 @@ She is a teacher.
     Toronto, Canada (note that the country name comes first in Japanese, as in “Canada’s Toronto” or “Toronto of Canada.”</code>
 </section>
 
-<section class="main-section" id="Vocabulary_Family_Members_and_Pets">
+<section class="main-section" id="Vocabulary:_Family_Members_and_Pets">
   <header>Vocabulary: Family Members and Pets</header>
   <p>Below is a list of vocabulary for family and members and common types of pets. Look over the list and refer to it when doing the “Let’s Try!” exercises that follow.</p>
   <code>おかあさん = mother	おとうさん = father		おにいさん = older brother
@@ -162,7 +164,7 @@ She is a teacher.
     おじさん = uncle	いとこ = cousin	いぬ = dog	ねこ = cat	とり = bird	きんぎょ = goldfish</code>
 </section>
 
-<section class="main-section" id="Lets_Try_3">
+<section class="main-section" id="Let's_Try!_#3">
   <header>Let's Try! #3</header>
   <ul>Translate these Japanese sentences into English:</ul>
     <li>かのじょのおかあさんはかんごしです。</li>
@@ -176,9 +178,34 @@ She is a teacher.
   </ul>
 </section>
 
-
-
-
+<section class="main-section" id="Review_Exercises">
+  <header>Review Exercises</header>
+  <p>The following exercises will combine the vocabulary and grammar covered in each of the previous sections. Try these final exercises before completing this lesson. You can refer to the previous grammar explanations and vocabulary lists as needed.</p>
+  <h2>Meeting Someone New</h2>
+    <p>Please read this sample conversation and complete the underlined segments with your own answers.</p>
+    <code>Takuya: はじめまして。たくやです。おなまえは？
+      You: ______________________。よろしくおねがいします。
+      Takuya: アメリカじんですか。
+      You: _____________________________________。
+      Takuya: そうですか。なんさいですか。
+      You: __________________________________。
+      Takuya: そうですか。じゃあ、よろしくおねがいします。</code>
+    <div class="note">
+      <p>(Note: そうですか = Is that so? / I see; used in conversation to acknowledge what has been said to you)</p>
+    </div>
+  <ul>Please translate these Japanese sentences into English:</ul>
+    <li>かれのおかあさんはスペインじんです。</li>
+    <li>わたしのおじさんはいしゃです。</li>
+    <li>おとうとは９さいですか。 / いいえ、１０さいです。 / ああ、そうですか。</li>
+  </ul>
+  <ul>Please translate these English sentences into Japanese:</ul>
+    <li>Robert is French.</li>
+    <li>(My) younger sister is 20 years old.</li>
+    <li>(My) grandmother's name is Mary.</li>
+</section>
 </main>
+
+<footer>mcgrodk 2022 | github.com/mcgrodk</footer>
+
 </body>
 </html>
